--- a/index.html
+++ b/index.html
@@ -2593,7 +2593,7 @@
 
             // Send via EmailJS only (configured to your Gmail in EmailJS dashboard)
             try {
-                await emailjs.sendForm('service_uhqzwb2', 'template_k5gdcgb', feedbackForm);
+                await emailjs.sendForm('service_uhqzwb2', 'template_k4h48xg', feedbackForm);
                 alert('Feedback sent! Thank you.');
             } catch (emailErr) {
                 console.error('EmailJS Error (expected if not configured):', emailErr);
