--- a/index.html
+++ b/index.html
@@ -1353,6 +1353,18 @@
                             </div>
                             <button type="submit" class="btn btn-primary btn-submit" id="login-submit-btn">Login</button>
                         </form>
+                        <div class="social-login-container">
+                            <div class="social-login-divider"><span>or continue with</span></div>
+                            <button type="button" class="btn btn-google" id="google-auth-btn" aria-label="Continue with Google">
+                                <svg viewBox="0 0 18 18" aria-hidden="true" focusable="false">
+                                    <path fill="#EA4335" d="M9 3.48c1.69 0 2.82.73 3.47 1.34l2.53-2.46C13.88.89 11.77 0 9 0 5.48 0 2.44 1.99.96 4.9l2.98 2.32C4.49 5.04 6.57 3.48 9 3.48Z"/>
+                                    <path fill="#34A853" d="M17.64 9.2c0-.74-.06-1.28-.19-1.84H9v3.34h4.97c-.1.83-.64 2.08-1.84 2.92l2.84 2.2c1.7-1.57 2.67-3.88 2.67-6.62Z"/>
+                                    <path fill="#4A90E2" d="M3.94 10.78A5.53 5.53 0 0 1 3.64 9c0-.62.11-1.22.29-1.78L.96 4.9A8.996 8.996 0 0 0 0 9c0 1.46.35 2.84.96 4.1l2.98-2.32Z"/>
+                                    <path fill="#FBBC05" d="M9 18c2.43 0 4.47-.8 5.96-2.19l-2.84-2.2c-.76.52-1.78.88-3.12.88-2.43 0-4.51-1.56-5.06-3.62L.96 13.1C2.44 16.01 5.48 18 9 18Z"/>
+                                </svg>
+                                <span>Continue with Google</span>
+                            </button>
+                        </div>
                         <div class="login-toggle">
                             <span id="login-toggle-text">Don't have an account?</span>
                             <a class="login-toggle-link" id="login-toggle-link">Sign Up</a>
