Polish Google sign-in UI and add welcome banner

--- a/index.html
+++ b/index.html
@@ -533,7 +533,7 @@
             background-color: #00d4a8;
             border-color: #00d4a8;
         }
-        
+
         /* === JOB BOARD STYLES === */
         .filter-bar {
             padding: 20px 20px 0;
@@ -1362,7 +1362,7 @@
                                     <path fill="#4A90E2" d="M3.94 10.78A5.53 5.53 0 0 1 3.64 9c0-.62.11-1.22.29-1.78L.96 4.9A8.996 8.996 0 0 0 0 9c0 1.46.35 2.84.96 4.1l2.98-2.32Z"/>
                                     <path fill="#FBBC05" d="M9 18c2.43 0 4.47-.8 5.96-2.19l-2.84-2.2c-.76.52-1.78.88-3.12.88-2.43 0-4.51-1.56-5.06-3.62L.96 13.1C2.44 16.01 5.48 18 9 18Z"/>
                                 </svg>
-                                <span>Continue with Google</span>
+                                <span class="google-btn-label">Continue with Google</span>
                             </button>
                         </div>
                         <div class="login-toggle">
@@ -1815,7 +1815,12 @@
                 </div>
             </section>
         </div> </main>
-    
+    <footer class="site-footer">
+        <div class="container">
+            &copy; <span id="footer-year"></span> Campus Hub. All rights reserved. Built with ❤ for students.
+        </div>
+    </footer>
+
     <!-- Floating Buttons (Voice Assistant & Chatbot & Telegram) -->
     <button class="floating-btn voice-assistant-btn" id="voice-assist-btn" aria-label="Voice Assistant">🎤</button>
     <button class="floating-btn chat-btn" id="chat-toggle-btn" aria-label="Open Chatbot">💬</button>
