Fix admin dashboard visibility and add proper admin navigation handler

--- a/index.html
+++ b/index.html
@@ -453,6 +453,25 @@
             line-height: 1;
         }
 
+        /* Admin-only sections and elements */
+        [data-admin-only] {
+            display: none !important;
+        }
+
+        body.is-admin [data-admin-only] {
+            display: block !important;
+        }
+
+        body.is-admin [data-admin-only].btn-action,
+        body.is-admin [data-admin-only].btn,
+        body.is-admin li[data-admin-only] {
+            display: inline-block !important;
+        }
+
+        body.is-admin li[data-admin-only] {
+            display: list-item !important;
+        }
+
         .events-list {
             padding: 30px 20px;
             background-color: var(--color-bg);
@@ -1571,15 +1590,15 @@
                         <li><a id="nav-market-link" href="#page-market">Marketplace</a></li>
                         <li><a id="nav-profile-link" href="#page-profile">Profile</a></li>
                         <li><a id="nav-feedback-link" href="#page-feedback">Feedback</a></li>
-                        <li data-admin-only style="display:none;"><a id="nav-admin-dashboard-link"
+                        <li data-admin-only><a id="nav-admin-dashboard-link"
                                 href="#page-admin-dashboard">Admin</a></li>
                         <li><button id="btn-theme-toggle"
                                 style="border:none;background:#f3f4f6;border-radius:999px;padding:6px 12px;cursor:pointer;font-size:0.9rem;">🌙</button>
                         </li>
-                        <li data-logged-out><a class="nav-button-login" id="nav-login-link" role="button" aria-label="Open login dialog"
-                                tabindex="0">Login</a></li>
-                        <li data-logged-in style="display:none;"><a class="nav-button-login" id="nav-logout-link" role="button" aria-label="Logout"
-                                tabindex="0">Logout</a></li>
+                        <li data-logged-out><a class="nav-button-login" id="nav-login-link" role="button"
+                                aria-label="Open login dialog" tabindex="0">Login</a></li>
+                        <li data-logged-in style="display:none;"><a class="nav-button-login" id="nav-logout-link"
+                                role="button" aria-label="Logout" tabindex="0">Logout</a></li>
                     </ul>
                 </div>
             </nav>
@@ -2199,7 +2218,7 @@
 
         </section>
     </div>
-    <div id="page-admin-dashboard" class="page" data-admin-only style="display:none;">
+    <div id="page-admin-dashboard" class="page" data-admin-only>
         <section class="page-header">
             <div class="container">
                 <h1>Admin Dashboard</h1>
